fixed text align of container

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ h4 {
 
 #title-container {
   padding-top: 107px;
+  text-align: left !important;
 }
 
 #title-stack {
